y.output
Terminals unused in grammar

    symbol_exclamation
    symbol_hash
    keyword_struct
    keyword_typedef
    keyword_union


Rules useless in parser due to conflicts

  131 unary_operator: symbol_tilda


State 61 conflicts: 1 shift/reduce
State 80 conflicts: 12 reduce/reduce
State 280 conflicts: 1 shift/reduce
State 318 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: external_declaration
    2                 | translation_unit external_declaration

    3 external_declaration: function_definition
    4                     | declaration

    5 function_definition: declaration_specifiers declarator declaration_list_opt compound_statement

    6 declaration_list: declaration
    7                 | declaration_list declaration

    8 statement: labeled_statement
    9          | compound_statement
   10          | expression_statement
   11          | selection_statement
   12          | iteration_statement
   13          | jump_statement

   14 labeled_statement: identifier symbol_colon statement
   15                  | keyword_case constant_expression symbol_colon statement
   16                  | keyword_default symbol_colon statement

   17 compound_statement: symbol_open_curly_bracket block_item_list_opt symbol_closed_curly_bracket

   18 block_item_list: block_item
   19                | block_item_list block_item

   20 block_item: declaration
   21           | statement

   22 expression_statement: expression_opt symbol_semi_colon

   23 selection_statement: keyword_if symbol_open_bracket expression symbol_closed_bracket statement
   24                    | keyword_if symbol_open_bracket expression symbol_closed_bracket statement keyword_else statement
   25                    | keyword_switch symbol_open_bracket expression symbol_closed_bracket statement

   26 iteration_statement: keyword_while symbol_open_bracket expression symbol_closed_bracket statement
   27                    | keyword_do statement keyword_while symbol_open_bracket expression symbol_closed_bracket symbol_semi_colon
   28                    | keyword_for symbol_open_bracket expression_opt symbol_semi_colon expression_opt symbol_semi_colon expression_opt symbol_closed_bracket statement
   29                    | keyword_for symbol_open_bracket declaration expression_opt symbol_semi_colon expression_opt symbol_closed_bracket statement

   30 jump_statement: keyword_goto identifier symbol_semi_colon
   31               | keyword_continue symbol_semi_colon
   32               | keyword_break symbol_semi_colon
   33               | keyword_return expression_opt symbol_semi_colon

   34 declaration: declaration_specifiers init_declarator_list_opt symbol_semi_colon

   35 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   36                       | type_specifier declaration_specifiers_opt
   37                       | type_qualifier declaration_specifiers_opt
   38                       | function_specifier declaration_specifiers_opt

   39 init_declarator_list: init_declarator
   40                     | init_declarator_list symbol_comma init_declarator

   41 init_declarator: declarator
   42                | declarator symbol_equal initializer

   43 storage_class_specifier: keyword_extern
   44                        | keyword_static
   45                        | keyword_auto
   46                        | keyword_register

   47 type_specifier: keyword_void
   48               | keyword_char
   49               | keyword_short
   50               | keyword_int
   51               | keyword_long
   52               | keyword_float
   53               | keyword_double
   54               | keyword_signed
   55               | keyword_unsigned
   56               | keyword__Bool
   57               | keyword__Complex
   58               | keyword__Imaginary
   59               | enum_specifier

   60 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
   61                         | type_qualifier specifier_qualifier_list_opt

   62 enum_specifier: keyword_enum identifier_opt symbol_open_curly_bracket enumerator_list symbol_closed_curly_bracket
   63               | keyword_enum identifier_opt symbol_open_curly_bracket enumerator_list symbol_comma symbol_closed_curly_bracket
   64               | keyword_enum identifier

   65 enumerator_list: enumerator
   66                | enumerator_list symbol_comma enumerator

   67 enumerator: enumeration_constant
   68           | enumeration_constant symbol_equal constant_expression

   69 type_qualifier: keyword_const
   70               | keyword_restrict
   71               | keyword_volatile

   72 function_specifier: keyword_inline

   73 declarator: pointer_opt direct_declarator

   74 direct_declarator: identifier
   75                  | symbol_open_bracket declarator symbol_closed_bracket
   76                  | direct_declarator symbol_open_square_bracket type_qualifier_list_opt assignment_expression_opt symbol_closed_square_bracket
   77                  | direct_declarator symbol_open_square_bracket keyword_static type_qualifier_list_opt assignment_expression symbol_closed_square_bracket
   78                  | direct_declarator symbol_open_square_bracket type_qualifier_list keyword_static assignment_expression symbol_closed_square_bracket
   79                  | direct_declarator symbol_open_square_bracket type_qualifier_list_opt symbol_star symbol_closed_square_bracket
   80                  | direct_declarator symbol_closed_bracket parameter_type_list symbol_closed_bracket
   81                  | direct_declarator symbol_open_bracket identifier_list_opt symbol_closed_bracket

   82 pointer: symbol_star type_qualifier_list_opt
   83        | symbol_star type_qualifier_list_opt pointer

   84 type_qualifier_list: type_qualifier
   85                    | type_qualifier_list type_qualifier

   86 parameter_type_list: parameter_list
   87                    | parameter_list symbol_comma symbol_threedot

   88 parameter_list: parameter_declaration
   89               | parameter_list symbol_comma parameter_declaration

   90 parameter_declaration: declaration_specifiers declarator
   91                      | declaration_specifiers

   92 identifier_list: identifier
   93                | identifier_list symbol_comma identifier

   94 type_name: specifier_qualifier_list

   95 initializer: assignment_expression
   96            | symbol_open_curly_bracket initializer_list symbol_open_curly_bracket
   97            | symbol_open_curly_bracket initializer_list symbol_comma symbol_closed_curly_bracket

   98 initializer_list: designation_opt initializer
   99                 | initializer_list symbol_comma designation_opt initializer

  100 designation: designator_list symbol_equal

  101 designator_list: designator
  102                | designator_list designator

  103 designator: symbol_open_square_bracket constant_expression symbol_closed_square_bracket
  104           | symbol_dot identifier

  105 primary_expression: identifier
  106                   | constant
  107                   | string_constant
  108                   | symbol_open_bracket expression symbol_closed_bracket

  109 postfix_expression: primary_expression
  110                   | postfix_expression symbol_open_square_bracket expression symbol_closed_square_bracket
  111                   | postfix_expression symbol_open_bracket argument_expression_list_opt symbol_closed_bracket
  112                   | postfix_expression symbol_dot identifier
  113                   | postfix_expression symbol_dash_greater identifier
  114                   | postfix_expression symbol_double_plus
  115                   | postfix_expression symbol_double_minus
  116                   | symbol_open_bracket type_name symbol_closed_bracket symbol_open_curly_bracket initializer_list symbol_closed_curly_bracket
  117                   | symbol_open_bracket type_name symbol_closed_bracket symbol_open_curly_bracket initializer_list symbol_comma symbol_closed_curly_bracket

  118 argument_expression_list: assignment_expression
  119                         | argument_expression_list symbol_comma assignment_expression

  120 unary_expression: postfix_expression
  121                 | symbol_double_plus unary_expression
  122                 | symbol_double_minus unary_expression
  123                 | unary_operator cast_expression
  124                 | keyword_sizeof unary_expression
  125                 | keyword_sizeof symbol_open_bracket type_name symbol_closed_bracket

  126 unary_operator: symbol_and
  127               | symbol_star
  128               | symbol_plus
  129               | symbol_minus
  130               | symbol_tilda
  131               | symbol_tilda

  132 cast_expression: unary_expression
  133                | symbol_open_bracket type_name symbol_closed_bracket cast_expression

  134 multiplicative_expression: cast_expression
  135                          | multiplicative_expression symbol_star cast_expression
  136                          | multiplicative_expression symbol_divide cast_expression
  137                          | multiplicative_expression symbol_modulo cast_expression

  138 additive_expression: multiplicative_expression
  139                    | additive_expression symbol_plus multiplicative_expression
  140                    | additive_expression symbol_minus multiplicative_expression

  141 shift_expression: additive_expression
  142                 | shift_expression symbol_leftshift additive_expression
  143                 | shift_expression symbol_rightshift additive_expression

  144 relational_expression: shift_expression
  145                      | relational_expression symbol_less shift_expression
  146                      | relational_expression symbol_greater shift_expression
  147                      | relational_expression symbol_lesseq shift_expression
  148                      | relational_expression symbol_greatereq shift_expression

  149 equality_expression: relational_expression
  150                    | equality_expression symbol_doubleeq relational_expression
  151                    | equality_expression symbol_noteq relational_expression

  152 AND_expression: equality_expression
  153               | AND_expression symbol_and equality_expression

  154 exclusive_OR_expression: AND_expression
  155                        | exclusive_OR_expression symbol_xor AND_expression

  156 inclusive_OR_expression: exclusive_OR_expression
  157                        | inclusive_OR_expression symbol_oneor exclusive_OR_expression

  158 logical_AND_expression: inclusive_OR_expression
  159                       | logical_AND_expression symbol_doubleand inclusive_OR_expression

  160 logical_OR_expression: logical_AND_expression
  161                      | logical_OR_expression symbol_doubleor logical_AND_expression

  162 conditional_expression: logical_OR_expression
  163                       | logical_OR_expression symbol_question expression symbol_colon conditional_expression

  164 assignment_expression: conditional_expression
  165                      | unary_expression assignment_operator assignment_expression

  166 assignment_operator: symbol_equal
  167                    | symbol_muleq
  168                    | symbol_diveq
  169                    | symbol_modeq
  170                    | symbol_pluseq
  171                    | symbol_minuseq
  172                    | symbol_leftshifteq
  173                    | symbol_rightshifteq
  174                    | symbol_andeq
  175                    | symbol_xoreq
  176                    | symbol_oreq

  177 expression: assignment_expression
  178           | expression symbol_comma assignment_expression

  179 constant_expression: conditional_expression

  180 declaration_list_opt: declaration_list
  181                     | %empty

  182 block_item_list_opt: block_item_list
  183                    | %empty

  184 expression_opt: expression
  185               | %empty

  186 init_declarator_list_opt: init_declarator_list
  187                         | %empty

  188 declaration_specifiers_opt: declaration_specifiers
  189                           | %empty

  190 specifier_qualifier_list_opt: specifier_qualifier_list
  191                             | %empty

  192 identifier_opt: identifier
  193               | %empty

  194 pointer_opt: pointer
  195            | %empty

  196 type_qualifier_list_opt: type_qualifier_list
  197                        | %empty

  198 assignment_expression_opt: assignment_expression
  199                          | %empty

  200 identifier_list_opt: identifier_list
  201                    | %empty

  202 designation_opt: designation
  203                | %empty

  204 argument_expression_list_opt: argument_expression_list
  205                             | %empty


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    identifier (258) 14 30 64 74 92 93 104 105 112 113 192
    constant (259) 106
    string_constant (260) 107
    symbol_colon (261) 14 15 16 163
    symbol_closed_curly_bracket (262) 17 62 63 97 116 117
    symbol_open_curly_bracket (263) 17 62 63 96 97 116 117
    symbol_semi_colon (264) 22 27 28 29 30 31 32 33 34
    symbol_closed_bracket (265) 23 24 25 26 27 28 29 75 80 81 108 111 116 117 125 133
    symbol_open_bracket (266) 23 24 25 26 27 28 29 75 81 108 111 116 117 125 133
    symbol_comma (267) 40 63 66 87 89 93 97 99 117 119 178
    symbol_equal (268) 42 68 100 166
    symbol_open_square_bracket (269) 76 77 78 79 103 110
    symbol_closed_square_bracket (270) 76 77 78 79 103 110
    symbol_star (271) 79 82 83 127 135
    symbol_threedot (272) 87
    symbol_dot (273) 104 112
    symbol_dash_greater (274) 113
    symbol_double_plus (275) 114 121
    symbol_double_minus (276) 115 122
    symbol_and (277) 126 153
    symbol_plus (278) 128 139
    symbol_minus (279) 129 140
    symbol_tilda (280) 130 131
    symbol_exclamation (281)
    symbol_divide (282) 136
    symbol_modulo (283) 137
    symbol_leftshift (284) 142
    symbol_rightshift (285) 143
    symbol_less (286) 145
    symbol_greater (287) 146
    symbol_greatereq (288) 148
    symbol_lesseq (289) 147
    symbol_doubleeq (290) 150
    symbol_noteq (291) 151
    symbol_xor (292) 155
    symbol_oneor (293) 157
    symbol_doubleor (294) 161
    symbol_question (295) 163
    symbol_doubleand (296) 159
    symbol_muleq (297) 167
    symbol_diveq (298) 168
    symbol_modeq (299) 169
    symbol_pluseq (300) 170
    symbol_minuseq (301) 171
    symbol_leftshifteq (302) 172
    symbol_rightshifteq (303) 173
    symbol_xoreq (304) 175
    symbol_andeq (305) 174
    symbol_oreq (306) 176
    symbol_hash (307)
    keyword_if (308) 23 24
    keyword_else (309) 24
    keyword_switch (310) 25
    keyword_while (311) 26 27
    keyword_do (312) 27
    keyword_for (313) 28 29
    keyword_goto (314) 30
    keyword_continue (315) 31
    keyword_break (316) 32
    keyword_return (317) 33
    keyword_extern (318) 43
    keyword_static (319) 44 77 78
    keyword_auto (320) 45
    keyword_register (321) 46
    keyword_void (322) 47
    keyword_char (323) 48
    keyword_short (324) 49
    keyword_int (325) 50
    keyword_long (326) 51
    keyword_float (327) 52
    keyword_double (328) 53
    keyword_signed (329) 54
    keyword_unsigned (330) 55
    keyword__Bool (331) 56
    keyword__Complex (332) 57
    keyword__Imaginary (333) 58
    keyword_enum (334) 62 63 64
    keyword_const (335) 69
    keyword_restrict (336) 70
    keyword_volatile (337) 71
    keyword_inline (338) 72
    keyword_sizeof (339) 124 125
    keyword_default (340) 16
    keyword_struct (341)
    keyword_typedef (342)
    keyword_union (343)
    keyword_case (344) 15
    enumeration_constant (345) 67 68


Nonterminals, with rules where they appear

    $accept (91)
        on left: 0
    translation_unit (92)
        on left: 1 2
        on right: 0 2
    external_declaration (93)
        on left: 3 4
        on right: 1 2
    function_definition (94)
        on left: 5
        on right: 3
    declaration_list (95)
        on left: 6 7
        on right: 7 180
    statement (96)
        on left: 8 9 10 11 12 13
        on right: 14 15 16 21 23 24 25 26 27 28 29
    labeled_statement (97)
        on left: 14 15 16
        on right: 8
    compound_statement (98)
        on left: 17
        on right: 5 9
    block_item_list (99)
        on left: 18 19
        on right: 19 182
    block_item (100)
        on left: 20 21
        on right: 18 19
    expression_statement (101)
        on left: 22
        on right: 10
    selection_statement (102)
        on left: 23 24 25
        on right: 11
    iteration_statement (103)
        on left: 26 27 28 29
        on right: 12
    jump_statement (104)
        on left: 30 31 32 33
        on right: 13
    declaration (105)
        on left: 34
        on right: 4 6 7 20 29
    declaration_specifiers (106)
        on left: 35 36 37 38
        on right: 5 34 90 91 188
    init_declarator_list (107)
        on left: 39 40
        on right: 40 186
    init_declarator (108)
        on left: 41 42
        on right: 39 40
    storage_class_specifier (109)
        on left: 43 44 45 46
        on right: 35
    type_specifier (110)
        on left: 47 48 49 50 51 52 53 54 55 56 57 58 59
        on right: 36 60
    specifier_qualifier_list (111)
        on left: 60 61
        on right: 94 190
    enum_specifier (112)
        on left: 62 63 64
        on right: 59
    enumerator_list (113)
        on left: 65 66
        on right: 62 63 66
    enumerator (114)
        on left: 67 68
        on right: 65 66
    type_qualifier (115)
        on left: 69 70 71
        on right: 37 61 84 85
    function_specifier (116)
        on left: 72
        on right: 38
    declarator (117)
        on left: 73
        on right: 5 41 42 75 90
    direct_declarator (118)
        on left: 74 75 76 77 78 79 80 81
        on right: 73 76 77 78 79 80 81
    pointer (119)
        on left: 82 83
        on right: 83 194
    type_qualifier_list (120)
        on left: 84 85
        on right: 78 85 196
    parameter_type_list (121)
        on left: 86 87
        on right: 80
    parameter_list (122)
        on left: 88 89
        on right: 86 87 89
    parameter_declaration (123)
        on left: 90 91
        on right: 88 89
    identifier_list (124)
        on left: 92 93
        on right: 93 200
    type_name (125)
        on left: 94
        on right: 116 117 125 133
    initializer (126)
        on left: 95 96 97
        on right: 42 98 99
    initializer_list (127)
        on left: 98 99
        on right: 96 97 99 116 117
    designation (128)
        on left: 100
        on right: 202
    designator_list (129)
        on left: 101 102
        on right: 100 102
    designator (130)
        on left: 103 104
        on right: 101 102
    primary_expression (131)
        on left: 105 106 107 108
        on right: 109
    postfix_expression (132)
        on left: 109 110 111 112 113 114 115 116 117
        on right: 110 111 112 113 114 115 120
    argument_expression_list (133)
        on left: 118 119
        on right: 119 204
    unary_expression (134)
        on left: 120 121 122 123 124 125
        on right: 121 122 124 132 165
    unary_operator (135)
        on left: 126 127 128 129 130 131
        on right: 123
    cast_expression (136)
        on left: 132 133
        on right: 123 133 134 135 136 137
    multiplicative_expression (137)
        on left: 134 135 136 137
        on right: 135 136 137 138 139 140
    additive_expression (138)
        on left: 138 139 140
        on right: 139 140 141 142 143
    shift_expression (139)
        on left: 141 142 143
        on right: 142 143 144 145 146 147 148
    relational_expression (140)
        on left: 144 145 146 147 148
        on right: 145 146 147 148 149 150 151
    equality_expression (141)
        on left: 149 150 151
        on right: 150 151 152 153
    AND_expression (142)
        on left: 152 153
        on right: 153 154 155
    exclusive_OR_expression (143)
        on left: 154 155
        on right: 155 156 157
    inclusive_OR_expression (144)
        on left: 156 157
        on right: 157 158 159
    logical_AND_expression (145)
        on left: 158 159
        on right: 159 160 161
    logical_OR_expression (146)
        on left: 160 161
        on right: 161 162 163
    conditional_expression (147)
        on left: 162 163
        on right: 163 164 179
    assignment_expression (148)
        on left: 164 165
        on right: 77 78 95 118 119 165 177 178 198
    assignment_operator (149)
        on left: 166 167 168 169 170 171 172 173 174 175 176
        on right: 165
    expression (150)
        on left: 177 178
        on right: 23 24 25 26 27 108 110 163 178 184
    constant_expression (151)
        on left: 179
        on right: 15 68 103
    declaration_list_opt (152)
        on left: 180 181
        on right: 5
    block_item_list_opt (153)
        on left: 182 183
        on right: 17
    expression_opt (154)
        on left: 184 185
        on right: 22 28 29 33
    init_declarator_list_opt (155)
        on left: 186 187
        on right: 34
    declaration_specifiers_opt (156)
        on left: 188 189
        on right: 35 36 37 38
    specifier_qualifier_list_opt (157)
        on left: 190 191
        on right: 60 61
    identifier_opt (158)
        on left: 192 193
        on right: 62 63
    pointer_opt (159)
        on left: 194 195
        on right: 73
    type_qualifier_list_opt (160)
        on left: 196 197
        on right: 76 77 79 82 83
    assignment_expression_opt (161)
        on left: 198 199
        on right: 76
    identifier_list_opt (162)
        on left: 200 201
        on right: 81
    designation_opt (163)
        on left: 202 203
        on right: 98 99
    argument_expression_list_opt (164)
        on left: 204 205
        on right: 111


State 0

    0 $accept: . translation_unit $end
    1 translation_unit: . external_declaration
    2                 | . translation_unit external_declaration
    3 external_declaration: . function_definition
    4                     | . declaration
    5 function_definition: . declaration_specifiers declarator declaration_list_opt compound_statement
   34 declaration: . declaration_specifiers init_declarator_list_opt symbol_semi_colon
   35 declaration_specifiers: . storage_class_specifier declaration_specifiers_opt
   36                       | . type_specifier declaration_specifiers_opt
   37                       | . type_qualifier declaration_specifiers_opt
   38                       | . function_specifier declaration_specifiers_opt
   43 storage_class_specifier: . keyword_extern
   44                        | . keyword_static
   45                        | . keyword_auto
   46                        | . keyword_register
   47 type_specifier: . keyword_void
   48               | . keyword_char
   49               | . keyword_short
   50               | . keyword_int
   51               | . keyword_long
   52               | . keyword_float
   53               | . keyword_double
   54               | . keyword_signed
   55               | . keyword_unsigned
   56               | . keyword__Bool
   57               | . keyword__Complex
   58               | . keyword__Imaginary
   59               | . enum_specifier
   62 enum_specifier: . keyword_enum identifier_opt symbol_open_curly_bracket enumerator_list symbol_closed_curly_bracket
   63               | . keyword_enum identifier_opt symbol_open_curly_bracket enumerator_list symbol_comma symbol_closed_curly_bracket
   64               | . keyword_enum identifier
   69 type_qualifier: . keyword_const
   70               | . keyword_restrict
   71               | . keyword_volatile
   72 function_specifier: . keyword_inline

    keyword_extern      shift, and go to state 1
    keyword_static      shift, and go to state 2
    keyword_auto        shift, and go to state 3
    keyword_register    shift, and go to state 4
    keyword_void        shift, and go to state 5
    keyword_char        shift, and go to state 6
    keyword_short       shift, and go to state 7
    keyword_int         shift, and go to state 8
    keyword_long        shift, and go to state 9
    keyword_float       shift, and go to state 10
    keyword_double      shift, and go to state 11
    keyword_signed      shift, and go to state 12
    keyword_unsigned    shift, and go to state 13
    keyword__Bool       shift, and go to state 14
    keyword__Complex    shift, and go to state 15
    keyword__Imaginary  shift, and go to state 16
    keyword_enum        shift, and go to state 17
    keyword_const       shift, and go to state 18
    keyword_restrict    shift, and go to state 19
    keyword_volatile    shift, and go to state 20
    keyword_inline      shift, and go to state 21

    translation_unit         go to state 22
    external_declaration     go to state 23
    function_definition      go to state 24
    declaration              go to state 25
    declaration_specifiers   go to state 26
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31


State 1

   43 storage_class_specifier: keyword_extern .

    $default  reduce using rule 43 (storage_class_specifier)


State 2

   44 storage_class_specifier: keyword_static .

    $default  reduce using rule 44 (storage_class_specifier)


State 3

   45 storage_class_specifier: keyword_auto .

    $default  reduce using rule 45 (storage_class_specifier)


State 4

   46 storage_class_specifier: keyword_register .

    $default  reduce using rule 46 (storage_class_specifier)


State 5

   47 type_specifier: keyword_void .

    $default  reduce using rule 47 (type_specifier)


State 6

   48 type_specifier: keyword_char .

    $default  reduce using rule 48 (type_specifier)


State 7

   49 type_specifier: keyword_short .

    $default  reduce using rule 49 (type_specifier)


State 8

   50 type_specifier: keyword_int .

    $default  reduce using rule 50 (type_specifier)


State 9

   51 type_specifier: keyword_long .

    $default  reduce using rule 51 (type_specifier)


State 10

   52 type_specifier: keyword_float .

    $default  reduce using rule 52 (type_specifier)


State 11

   53 type_specifier: keyword_double .

    $default  reduce using rule 53 (type_specifier)


State 12

   54 type_specifier: keyword_signed .

    $default  reduce using rule 54 (type_specifier)


State 13

   55 type_specifier: keyword_unsigned .

    $default  reduce using rule 55 (type_specifier)


State 14

   56 type_specifier: keyword__Bool .

    $default  reduce using rule 56 (type_specifier)


State 15

   57 type_specifier: keyword__Complex .

    $default  reduce using rule 57 (type_specifier)


State 16

   58 type_specifier: keyword__Imaginary .

    $default  reduce using rule 58 (type_specifier)


State 17

   62 enum_specifier: keyword_enum . identifier_opt symbol_open_curly_bracket enumerator_list symbol_closed_curly_bracket
   63               | keyword_enum . identifier_opt symbol_open_curly_bracket enumerator_list symbol_comma symbol_closed_curly_bracket
   64               | keyword_enum . identifier
  192 identifier_opt: . identifier
  193               | . %empty  [symbol_open_curly_bracket]

    identifier  shift, and go to state 32

    $default  reduce using rule 193 (identifier_opt)

    identifier_opt  go to state 33


State 18

   69 type_qualifier: keyword_const .

    $default  reduce using rule 69 (type_qualifier)


State 19

   70 type_qualifier: keyword_restrict .

    $default  reduce using rule 70 (type_qualifier)


State 20

   71 type_qualifier: keyword_volatile .

    $default  reduce using rule 71 (type_qualifier)


State 21

   72 function_specifier: keyword_inline .

    $default  reduce using rule 72 (function_specifier)


State 22

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . external_declaration
    3 external_declaration: . function_definition
    4                     | . declaration
    5 function_definition: . declaration_specifiers declarator declaration_list_opt compound_statement
   34 declaration: . declaration_specifiers init_declarator_list_opt symbol_semi_colon
   35 declaration_specifiers: . storage_class_specifier declaration_specifiers_opt
   36                       | . type_specifier declaration_specifiers_opt
   37                       | . type_qualifier declaration_specifiers_opt
   38                       | . function_specifier declaration_specifiers_opt
   43 storage_class_specifier: . keyword_extern
   44                        | . keyword_static
   45                        | . keyword_auto
   46                        | . keyword_register
   47 type_specifier: . keyword_void
   48               | . keyword_char
   49               | . keyword_short
   50               | . keyword_int
   51               | . keyword_long
   52               | . keyword_float
   53               | . keyword_double
   54               | . keyword_signed
   55               | . keyword_unsigned
   56               | . keyword__Bool
   57               | . keyword__Complex
   58               | . keyword__Imaginary
   59               | . enum_specifier
   62 enum_specifier: . keyword_enum identifier_opt symbol_open_curly_bracket enumerator_list symbol_closed_curly_bracket
   63               | . keyword_enum identifier_opt symbol_open_curly_bracket enumerator_list symbol_comma symbol_closed_curly_bracket
   64               | . keyword_enum identifier
   69 type_qualifier: . keyword_const
   70               | . keyword_restrict
   71               | . keyword_volatile
   72 function_specifier: . keyword_inline

    $end                shift, and go to state 34
    keyword_extern      shift, and go to state 1
    keyword_static      shift, and go to state 2
    keyword_auto        shift, and go to state 3
    keyword_register    shift, and go to state 4
    keyword_void        shift, and go to state 5
    keyword_char        shift, and go to state 6
    keyword_short       shift, and go to state 7
    keyword_int         shift, and go to state 8
    keyword_long        shift, and go to state 9
    keyword_float       shift, and go to state 10
    keyword_double      shift, and go to state 11
    keyword_signed      shift, and go to state 12
    keyword_unsigned    shift, and go to state 13
    keyword__Bool       shift, and go to state 14
    keyword__Complex    shift, and go to state 15
    keyword__Imaginary  shift, and go to state 16
    keyword_enum        shift, and go to state 17
    keyword_const       shift, and go to state 18
    keyword_restrict    shift, and go to state 19
    keyword_volatile    shift, and go to state 20
    keyword_inline      shift, and go to state 21

    external_declaration     go to state 35
    function_definition      go to state 24
    declaration              go to state 25
    declaration_specifiers   go to state 26
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31


State 23

    1 translation_unit: external_declaration .

    $default  reduce using rule 1 (translation_unit)


State 24

    3 external_declaration: function_definition .

    $default  reduce using rule 3 (external_declaration)


State 25

    4 external_declaration: declaration .

    $default  reduce using rule 4 (external_declaration)


State 26

    5 function_definition: declaration_specifiers . declarator declaration_list_opt compound_statement
   34 declaration: declaration_specifiers . init_declarator_list_opt symbol_semi_colon
   39 init_declarator_list: . init_declarator
   40                     | . init_declarator_list symbol_comma init_declarator
   41 init_declarator: . declarator
   42                | . declarator symbol_equal initializer
   73 declarator: . pointer_opt direct_declarator
   82 pointer: . symbol_star type_qualifier_list_opt
   83        | . symbol_star type_qualifier_list_opt pointer
  186 init_declarator_list_opt: . init_declarator_list
  187                         | . %empty  [symbol_semi_colon]
  194 pointer_opt: . pointer
  195            | . %empty  [identifier, symbol_open_bracket]

    symbol_star  shift, and go to state 36

    symbol_semi_colon  reduce using rule 187 (init_declarator_list_opt)
    $default           reduce using rule 195 (pointer_opt)

    init_declarator_list      go to state 37
    init_declarator           go to state 38
    declarator                go to state 39
    pointer                   go to state 40
    init_declarator_list_opt  go to state 41
    pointer_opt               go to state 42


State 27

   35 declaration_specifiers: . storage_class_specifier declaration_specifiers_opt
   35                       | storage_class_specifier . declaration_specifiers_opt
   36                       | . type_specifier declaration_specifiers_opt
   37                       | . type_qualifier declaration_specifiers_opt
   38                       | . function_specifier declaration_specifiers_opt
   43 storage_class_specifier: . keyword_extern
   44                        | . keyword_static
   45                        | . keyword_auto
   46                        | . keyword_register
   47 type_specifier: . keyword_void
   48               | . keyword_char
   49               | . keyword_short
   50               | . keyword_int
   51               | . keyword_long
   52               | . keyword_float
   53               | . keyword_double
   54               | . keyword_signed
   55               | . keyword_unsigned
   56               | . keyword__Bool
   57               | . keyword__Complex
   58               | . keyword__Imaginary
   59               | . enum_specifier
   62 enum_specifier: . keyword_enum identifier_opt symbol_open_curly_bracket enumerator_list symbol_closed_curly_bracket
   63               | . keyword_enum identifier_opt symbol_open_curly_bracket enumerator_list symbol_comma symbol_closed_curly_bracket
   64               | . keyword_enum identifier
   69 type_qualifier: . keyword_const
   70               | . keyword_restrict
   71               | . keyword_volatile
   72 function_specifier: . keyword_inline
  188 declaration_specifiers_opt: . declaration_specifiers
  189                           | . %empty  [identifier, symbol_semi_colon, symbol_closed_bracket, symbol_open_bracket, symbol_comma, symbol_star]

    keyword_extern      shift, and go to state 1
    keyword_static      shift, and go to state 2
    keyword_auto        shift, and go to state 3
    keyword_register    shift, and go to state 4
    keyword_void        shift, and go to state 5
    keyword_char        shift, and go to state 6
    keyword_short       shift, and go to state 7
    keyword_int         shift, and go to state 8
    keyword_long        shift, and go to state 9
    keyword_float       shift, and go to state 10
    keyword_double      shift, and go to state 11
    keyword_signed      shift, and go to state 12
    keyword_unsigned    shift, and go to state 13
    keyword__Bool       shift, and go to state 14
    keyword__Complex    shift, and go to state 15
    keyword__Imaginary  shift, and go to state 16
    keyword_enum        shift, and go to state 17
    keyword_const       shift, and go to state 18
    keyword_restrict    shift, and go to state 19
    keyword_volatile    shift, and go to state 20
    keyword_inline      shift, and go to state 21

    $default  reduce using rule 189 (declaration_specifiers_opt)

    declaration_specifiers      go to state 43
    storage_class_specifier     go to state 27
    type_specifier              go to state 28
    enum_specifier              go to state 29
    type_qualifier              go to state 30
    function_specifier          go to state 31
    declaration_specifiers_opt  go to state 44


State 28

   35 declaration_specifiers: . storage_class_specifier declaration_specifiers_opt
   36                       | . type_specifier declaration_specifiers_opt
   36                       | type_specifier . declaration_specifiers_opt
   37                       | . type_qualifier declaration_specifiers_opt
   38                       | . function_specifier declaration_specifiers_opt
   43 storage_class_specifier: . keyword_extern
   44                        | . keyword_static
   45                        | . keyword_auto
   46                        | . keyword_register
   47 type_specifier: . keyword_void
   48               | . keyword_char
   49               | . keyword_short
   50               | . keyword_int
   51               | . keyword_long
   52               | . keyword_float
   53               | . keyword_double
   54               | . keyword_signed
   55               | . keyword_unsigned
   56               | . keyword__Bool
   57               | . keyword__Complex
   58               | . keyword__Imaginary
   59               | . enum_specifier
   62 enum_specifier: . keyword_enum identifier_opt symbol_open_curly_bracket enumerator_list symbol_closed_curly_bracket
   63               | . keyword_enum identifier_opt symbol_open_curly_bracket enumerator_list symbol_comma symbol_closed_curly_bracket
   64               | . keyword_enum identifier
   69 type_qualifier: . keyword_const
   70               | . keyword_restrict
   71               | . keyword_volatile
   72 function_specifier: . keyword_inline
  188 declaration_specifiers_opt: . declaration_specifiers
  189                           | . %empty  [identifier, symbol_semi_colon, symbol_closed_bracket, symbol_open_bracket, symbol_comma, symbol_star]

    keyword_extern      shift, and go to state 1
    keyword_static      shift, and go to state 2
    keyword_auto        shift, and go to state 3
    keyword_register    shift, and go to state 4
    keyword_void        shift, and go to state 5
    keyword_char        shift, and go to state 6
    keyword_short       shift, and go to state 7
    keyword_int         shift, and go to state 8
    keyword_long        shift, and go to state 9
    keyword_float       shift, and go to state 10
    keyword_double      shift, and go to state 11
    keyword_signed      shift, and go to state 12
    keyword_unsigned    shift, and go to state 13
    keyword__Bool       shift, and go to state 14
    keyword__Complex    shift, and go to state 15
    keyword__Imaginary  shift, and go to state 16
    keyword_enum        shift, and go to state 17
    keyword_const       shift, and go to state 18
    keyword_restrict    shift, and go to state 19
    keyword_volatile    shift, and go to state 20
    keyword_inline      shift, and go to state 21

    $default  reduce using rule 189 (declaration_specifiers_opt)

    declaration_specifiers      go to state 43
    storage_class_specifier     go to state 27
    type_specifier              go to state 28
    enum_specifier              go to state 29
    type_qualifier              go to state 30
    function_specifier          go to state 31
    declaration_specifiers_opt  go to state 45


State 29

   59 type_specifier: enum_specifier .

    $default  reduce using rule 59 (type_specifier)


State 30
